// Invoicing project - Phase 2 data model
// See CLAUDE.md for entity-model intent.

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// -------------------------------------------------------------------
// Enums
// -------------------------------------------------------------------

enum UserRole {
  ADMIN
  SDM
}

enum OutputTemplate {
  FSO
  PRE_INVOICE
}

enum TechType {
  FTE
  PROJECT
  DISPATCH
  SCHEDULED_VISIT
}

enum RateUnit {
  HOURLY
  DAILY
  PER_VISIT
  MONTHLY
}

enum InvoiceFormat {
  FSO
  PRE_INVOICE
}

// -------------------------------------------------------------------
// Domain
// -------------------------------------------------------------------

model Org {
  id              String         @id @default(cuid())
  name            String         @unique
  outputTemplate  OutputTemplate
  defaultCurrency String         @default("USD")
  createdAt       DateTime       @default(now())
  updatedAt       DateTime       @updatedAt

  clientAccounts ClientAccount[]
  technicians    Technician[]

  @@map("orgs")
}

model ClientAccount {
  id        String   @id @default(cuid())
  orgId     String
  name      String
  currency  String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  org         Org                 @relation(fields: [orgId], references: [id])
  rateCards   RateCard[]
  assignments Assignment[]
  invoiceRuns InvoiceRun[]
  userAccess  UserAccountAccess[]

  @@unique([orgId, name])
  @@map("client_accounts")
}

model RateCard {
  id              String    @id @default(cuid())
  clientAccountId String
  techType        TechType
  rateUnit        RateUnit
  rateAmount      Decimal   @db.Decimal(12, 2)
  otRate          Decimal?  @db.Decimal(12, 2)
  effectiveFrom   DateTime  @db.Date
  effectiveTo     DateTime? @db.Date
  createdAt       DateTime  @default(now())
  updatedAt       DateTime  @updatedAt

  clientAccount ClientAccount @relation(fields: [clientAccountId], references: [id], onDelete: Cascade)

  @@index([clientAccountId, techType, effectiveFrom])
  @@map("rate_cards")
}

model Technician {
  id            String   @id @default(cuid())
  employerOrgId String
  name          String
  primaryType   TechType
  active        Boolean  @default(true)
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  employerOrg Org          @relation(fields: [employerOrgId], references: [id])
  assignments Assignment[]

  @@index([employerOrgId, active])
  @@map("technicians")
}

model Assignment {
  id              String    @id @default(cuid())
  technicianId    String
  clientAccountId String
  techType        TechType
  startDate       DateTime  @db.Date
  endDate         DateTime? @db.Date
  createdAt       DateTime  @default(now())
  updatedAt       DateTime  @updatedAt

  technician       Technician       @relation(fields: [technicianId], references: [id])
  clientAccount    ClientAccount    @relation(fields: [clientAccountId], references: [id])
  timesheetEntries TimesheetEntry[]

  @@index([technicianId, startDate])
  @@index([clientAccountId, startDate])
  @@map("assignments")
}

model TimesheetEntry {
  id           String   @id @default(cuid())
  assignmentId String
  date         DateTime @db.Date
  hours        Decimal  @db.Decimal(6, 2)
  enteredById  String
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  assignment Assignment @relation(fields: [assignmentId], references: [id], onDelete: Cascade)
  enteredBy  User       @relation(fields: [enteredById], references: [id])

  @@unique([assignmentId, date])
  @@index([date])
  @@map("timesheet_entries")
}

model InvoiceRun {
  id              String        @id @default(cuid())
  clientAccountId String
  periodYear      Int
  periodMonth     Int
  format          InvoiceFormat
  fileUrl         String?
  generatedById   String
  generatedAt     DateTime      @default(now())

  clientAccount ClientAccount @relation(fields: [clientAccountId], references: [id])
  generatedBy   User          @relation(fields: [generatedById], references: [id])

  @@index([clientAccountId, periodYear, periodMonth])
  @@map("invoice_runs")
}

// -------------------------------------------------------------------
// Identity + scoping
// -------------------------------------------------------------------

model User {
  id            String    @id @default(cuid())
  email         String    @unique
  name          String?
  emailVerified DateTime?
  image         String?
  role          UserRole  @default(SDM)
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt

  accounts          Account[]
  sessions          Session[]
  userAccountAccess UserAccountAccess[]
  invoiceRuns       InvoiceRun[]
  timesheetEntries  TimesheetEntry[]

  @@map("users")
}

model UserAccountAccess {
  id              String   @id @default(cuid())
  userId          String
  clientAccountId String
  grantedAt       DateTime @default(now())

  user          User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  clientAccount ClientAccount @relation(fields: [clientAccountId], references: [id], onDelete: Cascade)

  @@unique([userId, clientAccountId])
  @@map("user_account_access")
}

// -------------------------------------------------------------------
// NextAuth adapter models (Phase 3 wiring)
// Names locked by @auth/prisma-adapter; tables prefixed `auth_*`.
// -------------------------------------------------------------------

model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String? @db.Text
  access_token      String? @db.Text
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String? @db.Text
  session_state     String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
  @@map("auth_accounts")
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("auth_sessions")
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
  @@map("auth_verification_tokens")
}
