erDiagram
    Org ||--o{ ClientAccount : "owns"
    Org ||--o{ Technician    : "employs"
    RateSubCategory ||--o{ AccountRate : "type-of"
    Sla             ||--o{ AccountRate : "covers"
    ClientAccount ||--o{ AccountRate       : "rate rows"
    ClientAccount ||--o{ MiscFee           : "misc fees"
    ClientAccount ||--o{ Assignment        : "tech assigned to"
    ClientAccount ||--o{ InvoiceRun        : "invoice history"
    ClientAccount ||--o{ UserAccountAccess : "SDM scope"
    Technician ||--o{ Assignment     : "works under"
    Assignment ||--o{ TimesheetEntry : "logs hours"
    User ||--o{ UserAccountAccess : "scoped to"
    User ||--o{ TimesheetEntry    : "entered by"
    User ||--o{ InvoiceRun        : "generated by"
    User ||--o{ Account : "OAuth links"
    User ||--o{ Session : "active sessions"

    Org {
        cuid     id              PK
        string   name            UK "HCL, Cognizant, TCS"
        enum     outputTemplate     "FSO or PRE_INVOICE"
        string   defaultCurrency    "USD"
    }

    ClientAccount {
        cuid    id        PK
        cuid    orgId     FK
        string  name         "Acadia, ZF, JLL, EverSource"
        string  currency     "nullable, defaults to org"
    }

    Sla {
        cuid    id        PK
        string  code      UK "NBD SBD 2BD 3BD 9X5X4 24X7X4 SCHEDULE NA"
        string  label
        int     sortOrder
    }

    RateSubCategory {
        cuid     id                PK
        enum     rateCategory         "DEDICATED PROJECT_TM DISPATCH_SCHED"
        string   code                 "FIRST_HOUR FULL_DAY ANNUAL_BACKFILL"
        string   label
        int      sortOrder
        bool     isOvertimeVariant    "true for OT or weekend rows"
    }

    AccountRate {
        cuid     id                PK
        cuid     clientAccountId   FK
        cuid     rateSubCategoryId FK
        int      band                 "0 to 4"
        cuid     slaId             FK
        decimal  rateAmount           "12,4 nullable manual"
        date     effectiveFrom
        date     effectiveTo          "nullable open-ended"
        string   notes
    }

    MiscFee {
        cuid    id              PK
        cuid    clientAccountId FK
        enum    kind               "MISCELLANEOUS_PRICES RETAINER_FEES MILEAGE BGV_COST PER_DIEM TOOLKIT ACCOUNT_SPECIFIC OTHER"
        string  label
        decimal amount             "nullable manual"
        string  notes
    }

    Technician {
        cuid    id              PK
        cuid    employerOrgId   FK
        string  firstName
        string  lastName
        enum    primaryCategory    "RateCategory"
        int     band               "0 to 4"
        bool    active
    }

    Assignment {
        cuid    id              PK
        cuid    technicianId    FK
        cuid    clientAccountId FK
        enum    rateCategory       "RateCategory"
        date    startDate
        date    endDate            "nullable open-ended"
    }

    TimesheetEntry {
        cuid    id           PK
        cuid    assignmentId FK
        date    date
        decimal hours           "6,2"
        cuid    enteredById  FK
    }

    InvoiceRun {
        cuid     id              PK
        cuid     clientAccountId FK
        int      periodYear
        int      periodMonth
        enum     format             "FSO or PRE_INVOICE"
        string   fileUrl
        cuid     generatedById   FK
        datetime generatedAt
    }

    User {
        cuid   id    PK
        string email UK
        string name
        enum   role     "ADMIN or SDM"
    }

    UserAccountAccess {
        cuid     id              PK
        cuid     userId          FK
        cuid     clientAccountId FK
        datetime grantedAt
    }

    Account {
        cuid   id                PK
        cuid   userId            FK
        string provider
        string providerAccountId
    }

    Session {
        cuid     id           PK
        cuid     userId       FK
        string   sessionToken UK
        datetime expires
    }
